# geminicli2api

./: .gitignore  ACCOUNT_SETUP.md  API_GUIDE.md  README.md  pyproject.toml  srt_to_txt.py  start.py  test_accounts.py  test_concurrency.py
apps/gemini_translator/: config.py  start.py
apps/gemini_translator/prompts/: prompt_helper copy.txt  prompt_helper.txt  prompt_helper86.txt  prompt_helperCOTE.txt  prompt_helperHOD.txt  prompt_helperKB.txt  prompt_helperKS.txt  prompt_helperLOM.txt  prompt_helperORV.txt  prompt_helperRSSG.txt  prompt_helperSS.txt  prompt_helperSS1.txt  prompt_helperSTBH.txt  prompt_helperTAD.txt  prompt_helperTAND.txt  prompt_helperTLM.txt  prompt_helperTPR.txt  prompt_main.txt
apps/gemini_translator/src/: api_client.py  formatter.py  number_in_words.py  text_chunker.py  translator.py
apps/gemini_translator/src/utils/: console.py  execution_timer.py
server/: accounts_manager.py  auth.py  config.py  gemini_routes.py  google_api_client.py  main.py  models.py  openai_routes.py  openai_transformers.py  start.py  utils.py
temp/brain_storm/: BRAINSTORM.md  BRAINSTORM_SUMMARY.md
